style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}
:root {
  /* --- Spacing & Sizing Scale (4px Base) --- */
  --space-xs: 0.25rem; /* 4px */
  --space-sm: 0.5rem; /* 8px */
  --space-md: 1rem; /* 16px (Base Unit) */
  --space-lg: 1.5rem; /* 24px */
  --space-xl: 2rem; /* 32px */
  --space-2xl: 3rem; /* 48px */

  /* --- Component Sizing Utilities --- */
  --size-border-radius: 0.5rem;
  /* * Catppuccin (Mocha) Color Palette
     * A dark, harmonious pastel theme based on the Catppuccin specification.
     * Uses the Mocha variant for deep backgrounds and vibrant pastels.
     */

  /* --- Backgrounds & Text --- */

  /* Deepest Background (Espresso) */
  --catppuccin-background-base: #1e1e2e;

  /* Surface Background (Subtle separation) */
  --catppuccin-background-surface: #313244;

  /* Primary Foreground/Text Color */
  --catppuccin-text-primary: #cdd6f4;

  /* Secondary Muted Text/Comments */
  --catppuccin-text-muted: #6c7086;

  /* --- Pastel Accents (Ideal for UI elements) --- */

  /* Mauve (Purple/Pink Tone) */
  --catppuccin-accent-mauve: #cba6f7;

  /* Blue (Cool Tone) */
  --catppuccin-accent-blue: #89b4fa;

  /* Green (Success/Primary Highlight) */
  --catppuccin-accent-green: #a6e3a1;

  /* Yellow (Warning) */
  --catppuccin-accent-yellow: #f9e2af;

  /* Red (Error/Danger) */
  --catppuccin-accent-red: #f38ba8;

  /* breakpoints */
  --bp-sm: 36 rem; /*~576px*/
  --bp-md: 48 rem; /*~768px*/
  --bp-lg: 64rem; /*~1024px*/
  --bp-xl: 80rem; /*~1280px*/
}
body,
html {
  height: 100%;
  font-family: system-ui, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans';
}
body {
  padding-top: env(safe-area-inset-top);
  padding-right: env(safe-area-inset-right);
  padding-bottom: env(safe-area-inset-bottom);
  padding-left: env(safe-area-inset-left);
  background-color: var(--catppuccin-background-base);
  color: var(--catppuccin-text-primary);
  accent-color: var(--catppuccin-accent-green);
}
/* --- CSS Reset to Remove Default Browser Margins --- */
body,
h1,
h2,
h3,
h4,
p,
ul,
ol,
figure,
fieldset {
  margin: 0;
  padding: 0;
}
fieldset {
  border: none;
}
a {
  text-decoration: none;
  font-weight: bold;
  color: var(--catppuccin-accent-blue);
}
.active {
    border:1px solid var(--catppuccin-accent-blue);
    background-color:var(--catppuccin-background-base);
    padding:var(--space-sm);
    border-radius:var(--space-xs);
}
li {
  list-style: none;
}
nav {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-md);
  padding: 0 var(--space-md);
  @media (min-width: 36rem) {
    justify-content: start;
  }
}
.logo-outer {
  justify-content: center;
  align-items: center;
  background-color: var(--catppuccin-background-surface);
  padding: var(--space-md);

  @media (min-width: 36rem) {
    justify-content: end;
  }
}
ul {
  display: contents;
}

.logo-outer,
nav {
  display: flex;
    console.log(link.getAttribute('href'), 'currentUrl', currentUrl);
    console.log(link.getAttribute('href'), 'currentUrl', currentUrl);
  flex-direction: column;
  @media (min-width: 36rem) {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }
}

.logo-image {
  display: block;
  padding: 0;
  margin: 0;
  height: 5rem;
  width: auto;
  object-fit: cover;
}
.main {
  display: flex;
  padding: var(--space-xl);
  justify-content: center;
}
.article{
    display:flex; flex-wrap:wrap; gap: var(--space-lg);padding: var(--space-lg);
    li { padding: var(--space-sm);}
}

.contact {
  display: grid;
  background: var(--catppuccin-background-surface);
  padding: var(--space-lg);
  width: 85%;
  border-radius: var(--space-lg);
}
form {
  display: grid;
  gap: var(--space-sm);
  @media (min-width: 36rem) {
    grid-template-columns: repeat(2, 1fr);
  }
}
.form-group {
  display: grid;
}
label {
  margin: 1ch 0;
}
filedset {
  display: grid;
  gap: inherit;
  grid-template-columns: inherit;
}
fieldset:has([required]) legend,
.form-group:has(:not([type='radio'])[required]) label {
  display: flex;
  gap: 1ch;
  &::after {
    content: '*';
    color: var(--catppuccin-accent-red);
  }
}
.form-group:has([type='radio'], [type='checkbox']) {
  display: flex;
  flex-wrap: wrap;
  gap: 1ch;
}
/* .form-group:has([type='radio']) { */
/*   flex-direction: column; */
/*   @media (mid-width: 36rem) { */
/*     flex-direction: row; */
/*   } */
/* } */
.span-all {
  grid-column: 1/-1;
}
input,
textarea {
  border: 1px solid var(--catppuccin-background-base);
  border-radius: var(--space-xs);
  padding: var(--space-xs) var(--space-sm);

  &:focus-visible {
    outline-color: var(--catppuccin-accent-green);
  }
}
textarea {
  resize: block;
  box-sizing: content-box;
  height: 6lh;
}

